deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wsbackend
  namespace: doodlemesh
  labels:
    app: wsbackend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wsbackend
  template:
    metadata:
      annotations:
        sidecar.istio.io/proxyCPU: "50m"
        sidecar.istio.io/proxyMemory: "64Mi"
        sidecar.istio.io/proxyCPULimit: "100m"
        sidecar.istio.io/proxyMemoryLimit: "128Mi"
      labels:
        app: wsbackend
    spec:
      containers:
        - name: wsbackend
          image: kush233/draw-websocket:6fd704bf0a07da7380e43e1776d2e9639438fe61
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "300m"
              memory: "512Mi"
