service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wsbackend
  namespace: doodlemesh
spec:
  selector:
    app: wsbackend
  ports:
    - name: http-ws
      port: 80
      targetPort: 8080
